--- a/netflix_clone/src/components/navbar/navbar.scss
+++ b/netflix_clone/src/components/navbar/navbar.scss
@@ -5,11 +5,12 @@
     position: fixed;
     top: 0;
     z-index: 999;
-    background: linear-gradient(to top, transparent 0%, rgb(0,0,0,0.3) 50%);
+    background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
 
-    &.scrolled{
-        background: var(--main-color);
+    &.scrolled {
+        background-color: var(--main-color);
     }
+
     .container {
         padding: 0px 50px;
         display: flex;
@@ -25,7 +26,8 @@
                 height: 25px;
                 margin-right: 40px;
             }
-            span{
+
+            span {
                 margin-right: 20px;
                 cursor: pointer;
             }
@@ -35,7 +37,7 @@
             display: flex;
             align-items: center;
 
-            .icon{
+            .icon {
                 margin: 0px 15px;
                 cursor: pointer;
             }
@@ -48,25 +50,24 @@
                 cursor: pointer;
             }
 
-            .profile{
-                .options{
+            .profile {
+                .options {
                     display: none;
                     background-color: var(--main-color);
                     border-radius: 5px;
                 }
 
-                span{
+                span {
                     padding: 10px;
                     cursor: pointer;
                 }
 
                 &:hover {
-                    .options{
+                    .options {
                         display: flex;
                         flex-direction: column;
                         position: absolute;
                     }
-                  
                 }
             }
         }
