--- a/netflix_clone/src/components/listItem/listItem.scss
+++ b/netflix_clone/src/components/listItem/listItem.scss
@@ -58,6 +58,21 @@
             font-size: 14px;
             font-weight: 600;
             color: gray;
+
+            .limit{
+                border: 1px solid gray;
+                padding: 1px 3px;
+                margin: 0 10px;
+            }
+        }
+        .desc{
+            font-size: 13px;
+            margin-bottom: 10px;
+        }
+
+        .genre{
+            color: lightgray;
+            font-size:14px;
         }
        } 
     }
