--- a/small-shopping-cart/src/index.css
+++ b/small-shopping-cart/src/index.css
@@ -47,3 +47,39 @@ a {
   align-items: center;
   
 }
+
+img.small {
+  max-height: 8rem;
+}
+
+button {
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1em #404040 solid;
+  background-color: #f0c040;
+  width: 100%;
+  cursor: pointer;
+}
+
+button.add {
+  background-color: #40c0f0;
+  width: 1.5rem;
+}
+
+button.remove {
+  background-color: #f04040;
+  width: 1.5rem;
+}
+
+button.badge{
+  background-color: #f04040;
+  border: none;
+  color: white;
+  width: 1.5rem;
+}
+
+.text-right {
+  text-align: right;
+}
