--- a/small-shopping-cart/src/index.css
+++ b/small-shopping-cart/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1, h2, h3 {
@@ -37,7 +37,7 @@ a {
 }
 
 .block {
-  background-color: grey;
+  background-color: lightgray;
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
